--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,13 +65,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
+  fonts:
+    - family: Montserrat
+      fonts:
+        - asset: Fonts/Montserrat-Medium.ttf
+          weight: 400
+        - asset: Fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: Fonts/Montserrat-SemiBold.ttf
+          weight: 500 
+
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
